Fix potential overlap in view-auction, selecting 1000 as max in search finds everything higher as well

--- a/WebContent/bootstrap/css/style.css
+++ b/WebContent/bootstrap/css/style.css
@@ -21,6 +21,19 @@ a {
 	font-weight: bold;
 }
 
+.view-auction-tools {
+	position: absolute;
+	top: 0;
+	right: 15px;
+	text-align: right;
+	width: 182px;
+}
+
+.view-auction-tools .dropdown-menu {
+	right: 0;
+	left: auto;
+}
+
 .list-group .active {
 	background-color: purple !important;
 }
